# mirage-bench

./: README.md  pyproject.toml
evaluation/: answer_llm_judge_multigpu.py  avg_citation_and_language_detect.py  bootstrap_elo_judge.py  bootstrap_prompts.py  citation_precision_recall.py  context_grounding_nli_model.py  fluency_llm_judge_multigpu.py  full_pairwise_anthropic_llm_as_a_judge.py  full_pairwise_anyscale_llm_as_a_judge.py  full_pairwise_gemini_llm_as_a_judge.py  full_pairwise_openai_llm_as_a_judge.py  pairwise_openai_llm_as_a_judge.py  pointwise_openai_llm_as_a_judge.py  reranker_query_cited_passages.py  rouge_and_bleu_scores.py  weight_learning_bootstrap_elo_judge.py
examples/arena_evals/: pairwise_eval_openai.py
examples/evaluation/: evaluate_auto_answer_overlap.py  evaluate_auto_fluency.py  evaluate_automatic_fluency.py  evaluate_context_grounding.py  evaluate_context_map_recall.py  evaluate_language_detection.py  evaluate_reranker_score.py
examples/generation/: api_client_generation.py  openai_inference.py  vllm_generation.py
examples/heuristic_evals/: evaluate_answer_rouge_blue.py  evaluate_auto_answer_overlap.py  evaluate_auto_fluency.py  evaluate_context_grounding.py  evaluate_context_map_recall.py  evaluate_language_detection.py  evaluate_reranker_score.py
examples/surrogate_judge/: training_and_inference.py
inference_scripts/: command_r_api_miracl_evaluation.py  convert_orpo_miracl_mix_dataset.py  gemma_2_miracl_evaluation.py  hf_inference_gemma2.py  llama_3_70b_miracl_evaluation.py  llama_3_70b_mkqa_evaluation.py  llama_3_70b_nomiracl_evaluation.py  load_model.py  openai_azure_api_miracl_evaluation.py  vllm_inference_deita_sft.py  vllm_inference_miracl_evaluation.py  vllm_inference_miracl_evaluation_lora.py  vllm_inference_mkqa_evaluation.py  vllm_inference_no_miracl.py  vllm_inference_orca_dpo_pairs.py  vllm_inference_orpo_dpo_40k_mix.py  vllm_inference_playground.py  vllm_inference_truthy_dpo_pairs.py  vllm_inference_ultrafeedback.py
inference_scripts/translation_miracl/: vllm_inference_english_to_x_miracl_rag.py
llm4judge_analysis/: weight_learning_bootstrap_elo_judge.py  weight_learning_bootstrap_elo_judge_amin.py
mirage_bench/: __init__.py  util.py
mirage_bench/dataset/: __init__.py
mirage_bench/evaluate/: __init__.py  automatic_answer_overlap.py  automatic_fluency.py  context_grounding.py  context_map_recall.py  language_detection.py  pairwise_llm_judge.py  reranker_score.py  rouge_and_blue.py  tokenizer.py  util.py  vllm.py
mirage_bench/generate/: __init__.py  anyscale.py  azure_openai.py  base.py  claude.py  cohere.py  dataset.py  default.py  gemini.py  openai.py  utils.py  vllm.py  vllm_old.py
mirage_bench/leaderboard/: __init__.py  bradley_terry.py  llm_judge.py  regression.py  util.py
